--- a/KnowledgeBase/KnowledgeBase/KnowledgeBase.csproj
+++ b/KnowledgeBase/KnowledgeBase/KnowledgeBase.csproj
@@ -82,6 +82,9 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Interface.cs" />
+    <Compile Include="Keyword.cs">
+      <DependentUpon>KnowledgeBase.tt</DependentUpon>
+    </Compile>
     <Compile Include="KnowledgeBase.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -99,12 +102,13 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Table.cs">
+    <Compile Include="SolvedReport.cs">
       <DependentUpon>KnowledgeBase.tt</DependentUpon>
     </Compile>
     <Compile Include="UnverifiedReport.cs">
       <DependentUpon>KnowledgeBase.tt</DependentUpon>
     </Compile>
+    <Compile Include="User.cs" />
     <Compile Include="VerifiedReport.cs">
       <DependentUpon>KnowledgeBase.tt</DependentUpon>
     </Compile>
